# Mandelbrot

./: .gitignore  CMakeLists.txt
src/: Mandelbrot.cpp  Mandelbrot.h
